# packages/shared/src/apigen/models/index.ts
@@ -8,11 +8,11 @@ export * from './monitor-type';
 export * from './user';
 export * from './validation-message';
 export * from './with-author';
+export * from './with-config';
 export * from './with-created-at';
 export * from './with-id';
 export * from './with-monitor-type';
 export * from './with-name';
-export * from './with-optional-http-config';
 export * from './with-password';
 export * from './with-schedule';
 export * from './with-status';
